customer.css
body {
    font-family: "Sofia", sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f0f0f0;
}

.pos-container {
    display: flex;
    justify-content: space-between;
    margin: 20px;
    background-color: #fff;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 5px;
}


.menu {
    gap: 16px;
    display: grid;
    justify-content: space-between;
    background-color: rgb(128, 171, 171);
    padding: 20px;
    width: 500px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

#grid {
    display: grid;
    width: 100%;
    grid-template-columns: repeat(3, 1fr);
}

ul {
    list-style-type: none;
    padding: 0;
}

li {
    margin: 5px;
    cursor: pointer;
    float: right;
    border-radius: 3px;
    border: 3px solid rgb(47, 121, 121);
}

li:hover {
    margin: 5px;
    cursor: pointer;
    border-radius: 3px;
    border: 1px solid #000;
    background-color: rgb(84, 155, 200);
}

.order {
    background-color: #f0f0f0;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.categ {
    background-color: #f0f0f0;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

#total-price {
    font-weight: bold;
    
}

.topnav {
    overflow: hidden;
    background-color: rgb(158, 195, 172);
  }

.topnav a {
    float: left;
    display: block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}  

.topnav input[type=text] {
    float: right;
    padding: 6px;
    border: none;
    margin-top: 8px;
    margin-right: 16px;
    font-size: 17px;
  }

  .box {
    width: 150px;
    height: 200px;
    border: 1px solid #ccc;
    margin: 10px;
    padding: 10px;
    text-align: center;
    display: inline-block;
}

food-img {
    max-width: 100%;
    height: auto;
    border-radius: 8px;

}

.menu-item-box {
    width: 285px;
    height: 230px;
    border: 1px solid #a52626;
    margin: 10px;
    padding: 10px;
    text-align: center;
    display: inline-block;
}

h1 {
    font-family: "Bodoni Moda", sans-serif;
    font-size: 55px;
    margin-top: -5px;
}


h2 {
    font-family: "Sofia", sans-serif;

    font-size: 35px;
    margin-top: -60px;
}

h3 {
    font-family: "Beth Ellen", sans-serif;
    font-size: 35px;
    margin-top: -25px;
}


h4 {
    font-family: "Bacasime Antique", sans-serif;
    font-size: 35px;
    margin-top: -15px;
    margin-left: 15px;
}


h5 {
    font-family:  "Times New Roman", Times, serif;
    font-size: 40px;
    margin-top: -5px;
    color: rgb(75, 158, 151);
}


h6 {
    font-family:  "Times New Roman", Times, serif;
    font-size: 40px;
    margin-top: -5px;
    color: rgb(30, 39, 38);
}


.clearfix::after {
    content: "";
    display: table;
    clear: both;
}

